try to fix the background on ios

--- a/public/resources/css/queries.css
+++ b/public/resources/css/queries.css
@@ -862,6 +862,22 @@
   ================= */
 
   /* navbar & greeting section */
+  section.greeting:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url(photos/2452.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
   ul.main-nav {
     padding-top: 15px;
   }
